k8s/infrastructure/routes/jellyfin-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: servarr-jellyfin
  namespace: servarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - jellyfin-internal.oprimoguslab.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: servarr-jellyfin
          port: 8096
